@@ -4546,20 +4546,19 @@ argument_list|)
 expr_stmt|;
 comment|// make sure it got in
 comment|// should be able to handle multiple delete commands in a single go
-name|StringWriter
-name|xml
+name|List
+argument_list|<
+name|String
+argument_list|>
+name|ids
 init|=
 operator|new
-name|StringWriter
+name|ArrayList
+argument_list|<
+name|String
+argument_list|>
 argument_list|()
 decl_stmt|;
-name|xml
-operator|.
-name|append
-argument_list|(
-literal|"<delete>"
-argument_list|)
-expr_stmt|;
 for|for
 control|(
 name|SolrInputDocument
@@ -4568,67 +4567,27 @@ range|:
 name|doc
 control|)
 block|{
-name|xml
+name|ids
 operator|.
-name|append
+name|add
 argument_list|(
-literal|"<id>"
-argument_list|)
-expr_stmt|;
-name|XML
-operator|.
-name|escapeCharData
-argument_list|(
-operator|(
-name|String
-operator|)
 name|d
 operator|.
-name|getField
+name|getFieldValue
 argument_list|(
 literal|"id"
 argument_list|)
 operator|.
-name|getFirstValue
-argument_list|()
-argument_list|,
-name|xml
-argument_list|)
-expr_stmt|;
-name|xml
-operator|.
-name|append
-argument_list|(
-literal|"</id>"
-argument_list|)
-expr_stmt|;
-block|}
-name|xml
-operator|.
-name|append
-argument_list|(
-literal|"</delete>"
-argument_list|)
-expr_stmt|;
-name|DirectXmlRequest
-name|up
-init|=
-operator|new
-name|DirectXmlRequest
-argument_list|(
-literal|"/update"
-argument_list|,
-name|xml
-operator|.
 name|toString
 argument_list|()
 argument_list|)
-decl_stmt|;
+expr_stmt|;
+block|}
 name|server
 operator|.
-name|request
+name|deleteById
 argument_list|(
-name|up
+name|ids
 argument_list|)
 expr_stmt|;
 name|server
